# my-protocols-assignment

./: .gitignore  README.html  README.md
rust-part/: Cargo.toml  README.md
rust-part/certs/: cert.pem  key.pem
rust-part/src/: main.rs  protocols.rs
rust-part/src/protocols/: dhcp.rs  dns.rs  http_server.rs  https_server.rs
ts-part/: README.md  ftp-client.ts  package.json  server.ts  smtp-client.ts  smtp-server.ts
